# sec-edgar-bulker

./: .coveragerc  .cursorrules  .gitignore  README.md  config.yaml  pyproject.toml  pytest.ini  requirements.txt  sec-edgar-bulker.py
src/sec_edgar_bulker/: __init__.py
src/sec_edgar_bulker/cli/: __init__.py  main.py
src/sec_edgar_bulker/core/: __init__.py  downloader.py  exceptions.py  header_generator.py  idx_downloader.py  models.py  proxy_manager.py  utils.py
tests/: __init__.py  conftest.py
tests/test_cli/: test_main.py
tests/test_core/: test_exceptions.py  test_header_generator.py  test_idx_downloader.py  test_models.py  test_proxy_manager.py  test_utils.py
